--- a/PAGES/6a_tuples_and_namedtuples/index.html
+++ b/PAGES/6a_tuples_and_namedtuples/index.html
@@ -2595,8 +2595,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Our previous discussions on collections have centered around vectors and tuples. The current section expands on the subject, offering a more comprehensive analysis of tuples. Furthermore, we introduce two new types of collections: <strong>named tuples</strong> and <strong>dictionaries</strong>. </p>
-<p>The section will cover in particular three topics: how to characterize collections through keys and values, methods for their manipulation, and approaches to transforming one collection into another. </p>
+<p>Our previous discussions on collections have centered around vectors and tuples. The current section expands on the subject, offering a more comprehensive analysis of tuples and introducing two new types of collections: <strong>named tuples</strong> and <strong>dictionaries</strong>. </p>
+<p>The section will cover in particular three topics: how to characterize collections through keys and values, methods for the manipulation of collections, and approaches to transforming one collection into another. </p>
 <p>      </div>
     </div>
   </div>
